[gd_scene load_steps=49 format=2]

[ext_resource path="res://Level/TilesetPadat.tres" type="TileSet" id=1]
[ext_resource path="res://assets/Wood and Paper UI/Prefabs/3.png" type="Texture" id=2]
[ext_resource path="res://assets/Folks-Normal.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Wood and Paper UI/Prefabs/8.png" type="Texture" id=4]
[ext_resource path="res://Level/TombolPopUp.tres" type="StyleBox" id=5]
[ext_resource path="res://Level/TombolFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Level/VBoxMenuLevel.gd" type="Script" id=7]
[ext_resource path="res://assets/Palm Tree Island/Background/BG Image.png" type="Texture" id=8]
[ext_resource path="res://assets/Palm Tree Island/Background/Additional Sky.png" type="Texture" id=9]
[ext_resource path="res://assets/Palm Tree Island/Back Palm Trees/Back Palm Tree Left 01.png" type="Texture" id=10]
[ext_resource path="res://assets/Palm Tree Island/Front Palm Trees/Front Palm Tree Top 01.png" type="Texture" id=11]
[ext_resource path="res://assets/Palm Tree Island/Back Palm Trees/Back Palm Tree Right 01.png" type="Texture" id=12]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 05.png" type="Texture" id=13]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 03.png" type="Texture" id=14]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 02.png" type="Texture" id=15]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 04.png" type="Texture" id=16]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 01.png" type="Texture" id=17]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 06.png" type="Texture" id=18]
[ext_resource path="res://Level/FierceToothTitle.gd" type="Script" id=19]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 08.png" type="Texture" id=20]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" type="Texture" id=21]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" type="Texture" id=22]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 02.png" type="Texture" id=23]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 06.png" type="Texture" id=24]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 03.png" type="Texture" id=25]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" type="Texture" id=26]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 09.png" type="Texture" id=27]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" type="Texture" id=28]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 04.png" type="Texture" id=29]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 02.png" type="Texture" id=30]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 06.png" type="Texture" id=31]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 04.png" type="Texture" id=32]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 08.png" type="Texture" id=33]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 07.png" type="Texture" id=34]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 01.png" type="Texture" id=35]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 05.png" type="Texture" id=36]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 3, 3, 122, 122 )
margin_top = 1.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 13, 16, 69, 65 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 18 ) ]
}

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 11 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=12]

[node name="MenuLevel" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 33, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 34, 0, 65536, 10, 0, 65546, 10, 0, 131072, 10, 0, 131074, 30, 0, 131080, 30, 0, 131082, 10, 0, 196608, 10, 0, 196618, 10, 0, 262144, 11, 0, 262154, 11, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 2, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.382353
anchor_top = 0.225
anchor_right = 0.661765
anchor_bottom = 0.8
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
margin_left = 15.0
margin_top = 18.0
margin_right = 119.0
margin_bottom = 36.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
align = 1

[node name="VBoxMenuLevel" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_left = 0.22963
anchor_top = 0.25
anchor_right = 0.740741
anchor_bottom = 0.901515
margin_left = 3.8147e-06
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level1" type="Button" parent="CanvasLayer/Panel/VBoxMenuLevel"]
margin_right = 69.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Level 1"

[node name="Level2" type="Button" parent="CanvasLayer/Panel/VBoxMenuLevel"]
margin_top = 29.0
margin_right = 69.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Level 2"

[node name="Level3" type="Button" parent="CanvasLayer/Panel/VBoxMenuLevel"]
margin_top = 58.0
margin_right = 69.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Level 3"

[node name="Kembali" type="Button" parent="CanvasLayer/Panel/VBoxMenuLevel"]
margin_top = 87.0
margin_right = 69.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Kembali"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BgImage" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 192, 190 )
texture = ExtResource( 8 )

[node name="AdditionalSky" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 192, 62.5 )
scale = Vector2( 12, 3.96875 )
texture = ExtResource( 9 )

[node name="BackPalmTreeLeft01" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 52, 129 )
texture = ExtResource( 10 )

[node name="BackPalmTreeRight01" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 302, 131 )
texture = ExtResource( 12 )

[node name="FrontPalmTreeTop02" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 314, 209 )
texture = ExtResource( 11 )

[node name="FrontPalmTreeTop01" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 23, 209 )
texture = ExtResource( 11 )

[node name="FierceToothTitle" type="KinematicBody2D" parent="."]
position = Vector2( 97, 215 )
collision_layer = 0
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="FierceToothTitle"]
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FierceToothTitle"]
position = Vector2( 1, 2 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="FierceToothTitle"]
position = Vector2( -12, 3 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FierceToothTitle"]
anims/RESET = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="FierceToothTitle2" type="KinematicBody2D" parent="."]
position = Vector2( 330, 212 )
collision_layer = 0
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="FierceToothTitle2"]
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FierceToothTitle2"]
position = Vector2( 1, 2 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="FierceToothTitle2"]
position = Vector2( -12, 3 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FierceToothTitle2"]
anims/RESET = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="Crabby" type="KinematicBody2D" parent="."]
position = Vector2( 272, 52 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Crabby"]
frames = SubResource( 10 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crabby"]
position = Vector2( 0, 1 )
shape = SubResource( 9 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 80, 51 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 11 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 12 )

[connection signal="pressed" from="CanvasLayer/Panel/VBoxMenuLevel/Level1" to="CanvasLayer/Panel/VBoxMenuLevel" method="_on_Level1_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxMenuLevel/Level2" to="CanvasLayer/Panel/VBoxMenuLevel" method="_on_Level2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxMenuLevel/Level3" to="CanvasLayer/Panel/VBoxMenuLevel" method="_on_Level3_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxMenuLevel/Kembali" to="CanvasLayer/Panel/VBoxMenuLevel" method="_on_Kembali_pressed"]
